fix(generation): fix PSM-to-Artifacts code generation issues